--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 :root{
     --orange: #F2C14E;
-    --winning-blocks: #2d414b;
+    --winning-blocks: #19a0e3c9;
 }
 
 body{
@@ -29,7 +29,7 @@ h1{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #37505C;
+    background-image: linear-gradient(90deg, rgb(94, 169, 212), rgb(221, 120, 154));
 }
 
 #gameboard{
